   trends I grouped some common stuff in "automagic" sections in both
   the joystick and the overlay configuration functions. This also
   should cause the non configured locos (ones I don't have) to behave
   better by default (hopefully). Tell me if I broke something.
 - SPLIT INTO SEVERAL FILES
 - Configs for Soldier Summit and Mannheim - Karlsruhe locos
 - Made GT3 Gas Turbine work, requires repatching
 - Small fixes for A2 Peppercorn and GT3
 - Class 76 (Woodhead)
 - Consolidation (SmokeBox)
 - WARNING: if you've previously seen a message box that some loco
   has been detected and now you see "no custom configuration" it
   doesn't mean it's bad. I've done some generic detections here
   and there based on ControlValues and some custom configurations has
   become redundant. Test the loco, if it works fine, it's fine.

0.9.1
 - Tried to do UP Gas Turbine config, but the loco is bugged.
 - BR155 config.
 - PowerSelected added to Overlay and as a lever to Gear.
 - Fixes some minor issues for Fifties Steamers.
 - GWR Pannier config.
 - LargeEjector added to the list of joystick controllable axes.
   (it's usable in the Fifties Steamers)
 - Havner's Cofig for steamers moved to one common place

0.9
 - TS2016 (and '17, '18, '19) support.
 - Updated configs and detection for Locos from Sherman Hill,
   Cologne - Koblentz and PennCoal. For the new braking system on
   US locos turn off brake notches (CTRL+SHIFT+3).
 - WARNING: Due to the fact that more and more locos are heavily
   scripted the blue part of the overlay (controls) will now try
   to exclusively show actual lever values, not the internal values
   as original intended. The internals become more and more
   convoluted and meaningless. No point in mantaining that.
 - WARNING: Default for "change direction" changed to "D"
 - WARNING: Configuration syntax changed a little, now tables
            are used everywhere.
            ThrottleInvert became tshInvert["Throttle"], etc.